[metadata]
name = pywer
version = 0.1.0
url = https://github.com/jumon/pywer
author = jumon
author_email = jumon.nozaki@gmail.com
description = A simple Python package to calculate word error rate (WER).
long_description = file:README.md
long_description_content_type = text/markdown
licence = file:LICENCE
classifiers = 
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Multimedia :: Sound/Audio :: Speech

[options]
python_requires = >=3.6
install_requires =
    editdistance
tests_require =
    pytest
